--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "chai-jasmine",
   "description": "Jasmine style expect on top of chai.",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/crysalead-js/chai-jasmine.git"
   },
   "scripts": {
+    "test": "mocha",
     "dist": "browserify browser.js > chai-jasmine.js"
   },
   "dependencies": {
